add mailer settings

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,33 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+## config/applcaition.yml
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+```
+# Add configuration values here, as shown below.
+#
+# pusher_app_id: "2954"
+# pusher_key: 7381a978f7dd7f9a1117
+# pusher_secret: abdc3b896a0ffb85d373
+# stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
+# stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
+#
+# production:
+#   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
+#   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
+
+# 邮件服务器设置
+# 邮件服务器地址
+SENDGRID_ADDRESS: smtp.qq.com
+# 邮件服务器端口
+SENDGRID_PORT: 25
+# Domain
+SENDGRID_DOMAIN: qq.com
+# 邮件服务器用户名
+SENDGRID_USERNAME: 550757971@qq.com
+# 邮件服务器密码
+SENDGRID_PASSWORD: changeit!
+# 发送邮件的账户地址
+SENDGRID_FORM: test@bijiabo.com
+
+```
